src/objects/Country_Map__mdt.object
<CustomObject>
    <fields>
        <fullName>Corporation_ID__c</fullName>
        <label>Corporation ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country_ID__c</fullName>
        <label>Country ID</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>JDE_BU_Consulting__c</fullName>
        <label>JDE BU Consulting</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JDE_BU_Education__c</fullName>
        <label>JDE BU Education</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JDE_BU_Maintenance__c</fullName>
        <label>JDE BU Maintenance</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JDE_BU_Sales__c</fullName>
        <label>JDE BU Sales</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <label>Country Map</label>
    <listViews>
        <fullName>All_fields</fullName>
        <columns>MasterLabel</columns>
        <columns>DeveloperName</columns>
        <columns>Corporation_ID__c</columns>
        <columns>Country_ID__c</columns>
        <columns>JDE_BU_Consulting__c</columns>
        <columns>JDE_BU_Education__c</columns>
        <columns>JDE_BU_Maintenance__c</columns>
        <columns>JDE_BU_Sales__c</columns>
        <filterScope>Everything</filterScope>
        <label>All fields</label>
        <language>en_US</language>
    </listViews>
    <pluralLabel>Country Map</pluralLabel>
</CustomObject>